--- a/src/Components/HorizontalList.scss
+++ b/src/Components/HorizontalList.scss
@@ -2,7 +2,6 @@
 @import '../Styles/fonts';
 @import '../Styles/variables';
 
-
 .main-container {
   @include flexCenter;
   background-color: grey;
@@ -11,7 +10,6 @@
 
   outline: 4px solid orange;
 }
-
 
 .list-container {
   width: 100%;
@@ -23,6 +21,7 @@
   h4 {
     text-transform: uppercase;
     margin-bottom: $--margin--padding--2;
+    font-weight: 900;
   }
 
   .list-items-container {
@@ -55,8 +54,5 @@
   .list-items-container::-webkit-scrollbar-thumb:hover {
     background-color: #5749d2;
   }
-
-
-
 
 }
