--- a/src/Components/Main.scss
+++ b/src/Components/Main.scss
@@ -7,6 +7,7 @@
   background-color: grey;
   font-family: $--ff--primary;
   font-weight: 900;
+  outline: 13px solid blue;
 
   .carrousel {
     @include flexCenter;
