--- a/src/Components/Carrousel.scss
+++ b/src/Components/Carrousel.scss
@@ -1,38 +1,61 @@
+@import '../Styles/fonts';
+@import '../Styles/variables';
+
 .carrousel-main {
-  outline: 4px solid blue;
   overflow: hidden;
   height: 500px;
 
-  .image-container {
+  .carrousel-item-container {
     position: relative;
-    
+
     .carrousel-image {
       object-fit: contain;
     }
-    .carrousel-caption{
+
+    .carrousel-caption {
       position: absolute;
-      top: 3rem;
+      top: 50px;
+      left: 500px;
+      outline: 4px solid blue;
+      width: 400px;
+      height: 150px;
+
+      h3 {
+        font-size: 125%;
+        margin-bottom: $--margin--padding--2;
+        background-color: rgba($color: #000000, $alpha: 0.5);
+        padding: $--margin--padding--2;
+      }
+
+    }
+
+    .ItemList-positioning {
+      position: absolute;
+      left: 15%;
+      top: 10%;
+      transform: scale(100%);
     }
 
   }
 
-  
 
 
-  @media (max-width: 1400px){
+
+  @media (max-width: 1400px) {
     height: (1400px / 3);
   }
-  @media (max-width: 1000px){
+
+  @media (max-width: 1000px) {
     height: (1000px / 3);
   }
-    
-  @media (max-width:700px){
+
+  @media (max-width:700px) {
     height: (700px / 3);
   }
-    
-  @media (max-width: 400px){
+
+  @media (max-width: 400px) {
     height: (400px / 2);
   }
-    
-    
+
+
 }
