--- a/src/Components/HorizontalList.scss
+++ b/src/Components/HorizontalList.scss
@@ -6,7 +6,6 @@
   @include flexCenter;
   background-color: grey;
   font-family: $--ff--primary;
-  font-weight: 900;
 
   outline: 4px solid orange;
 }
@@ -18,10 +17,10 @@
   background-color: rgb(96, 97, 96);
   padding: $--margin--padding--4;
 
-  h4 {
+  .horizontal-list-title {
     text-transform: uppercase;
     margin-bottom: $--margin--padding--2;
-    font-weight: 900;
+    font-weight: 700;
   }
 
   .list-items-container {
