--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -1,6 +1,8 @@
 $--btn--clr--text: rgba(255, 255, 255, 0.8);
 $--btn--clr--bg: rgba(109, 109, 109, 0.8);
 
+$--bg--clr--1: grey;
+
 $--margin--padding--1: 8px;
 $--margin--padding--2: 16px;
 $--margin--padding--3: 24x;
