--- a/src/Components/HorizontalList.scss
+++ b/src/Components/HorizontalList.scss
@@ -6,8 +6,6 @@
   @include flexCenter;
   background-color: grey;
   font-family: $--ff--primary;
-
-  outline: 4px solid orange;
 }
 
 .list-container {
@@ -25,10 +23,10 @@
 
   .list-items-container {
     outline: 4px solid blue;
-    @include flexCenter($direction: row, $content: space-around);
+    @include flexCenter($direction: row, $content: flex-start);
+    align-items: flex-start;
     gap: $--margin--padding--2;
     overflow-x: scroll;
-    justify-content: flex-start;
     scrollbar-gutter: stable;
   }
 
