--- a/src/Components/MovieDetailInfo.scss
+++ b/src/Components/MovieDetailInfo.scss
@@ -3,13 +3,10 @@
 @import '../Styles/variables';
 
 .details-container {
+  @include detailBackground;
   display: flex;
   position: relative;
-  background: rgb(0, 0, 0);
-  background: linear-gradient(0deg, rgba(0, 0, 0, 1) 10%, rgb(66, 66, 66) 50%, rgba(0, 0, 0, 1) 90%);
-  color: $--btn--clr--text;
-  font-family: 'Libre Franklin', sans-serif;
-  width: 100%;
+
 
   .details-container-image {
     outline: 3px solid blue;
@@ -34,16 +31,20 @@
       line-height: 25px;
     }
 
-    .rating {
+    .details-rating {
+      // outline: 2px solid red;
+      font-size: 1rem;
+      font-weight: 100;
+      background-color: rgba($color: rgb(94, 94, 94), $alpha: .4);
+      color: white;
+      padding: 5px 7px 0;
+      border-radius: 15px;
+    }
+
+    .details-misc {
       outline: 2px solid red;
       font-size: 1rem;
       font-weight: 100;
     }
-
-      .details-misc {
-        outline: 2px solid red;
-        font-size: 1rem;
-        font-weight: 100;
-      }
   }
 }
