--- a/src/Components/MovieDetailInfo.scss
+++ b/src/Components/MovieDetailInfo.scss
@@ -6,10 +6,9 @@
   @include detailBackground;
   display: flex;
   position: relative;
-
+  min-height: 80vh;
 
   .details-container-image {
-    outline: 3px solid blue;
     @include flexCenter;
     width: 400px;
   }
@@ -20,19 +19,19 @@
     align-items: flex-start;
     padding: $--margin--padding--4;
     gap: $--margin--padding--4;
-    outline: 3px solid orange;
 
     h3 {
       text-transform: uppercase;
+      font-weight: 600;
       font-size: 1.5rem;
     }
 
     p {
       line-height: 25px;
+      font-weight: 100;
     }
 
     .details-rating {
-      // outline: 2px solid red;
       font-size: 1rem;
       font-weight: 100;
       background-color: rgba($color: rgb(94, 94, 94), $alpha: .4);
@@ -42,9 +41,39 @@
     }
 
     .details-misc {
-      outline: 2px solid red;
       font-size: 1rem;
-      font-weight: 100;
+      font-weight: 400;
     }
   }
+
+
+  @media (max-width:800px) {
+    .details-container-image {
+      img {
+        transform: scale(80%);
+      }
+    }
+  }
+
+  @media (max-width: 650px) {
+    @include flexCenter($direction: column);
+
+    .details-container-image {
+      width: 100%;
+      padding: 0;
+      margin: 0;
+
+      img {
+        width: 50%;
+        padding: 0;
+        margin: 0;
+      }
+    }
+
+    .details-container-description {
+      width: 100%;
+      gap: $--margin--padding--2;
+    }
+  }
+
 }
